--- a/index.html
+++ b/index.html
@@ -1,13 +1,5 @@
-<!DOCTYPE html>
-<html>
-<body>
-
-<p>Click on the "Choose File" button to upload a file:</p>
-
 <form action="/action_page.php">
-  <input type="file" id="myFile" name="filename">
+  <label for="files">Select files:</label>
+  <input type="file" id="files" name="files" multiple><br><br>
   <input type="submit">
 </form>
-
-</body>
-</html>
