--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1>The input multiple attribute</h1>
+
+<p>Try selecting more than one file when browsing for files.</p>
+
 <form action="/action_page.php">
   <label for="files">Select files:</label>
   <input type="file" id="files" name="files" multiple><br><br>
   <input type="submit">
 </form>
+
+</body>
+</html>
+
