--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <body>
 
-<h1>The input multiple attribute</h1>
+<h1>MusicAI Choose Files</h1>
 
-<p>Try selecting more than one file when browsing for files.</p>
+<p>Please select midi files.</p>
 
 <form action="/action_page.php">
   <label for="files">Select files:</label>
