--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <p>Please select midi files.</p>
 
-<form action="/action_page.php">
+<form action="/upload_files.php">
   <label for="files">Select files:</label>
   <input type="file" id="files" name="files" multiple><br><br>
   <input type="submit">
